[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["SiberianFalcon <bq.Sokol@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
python-docx = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
